--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -28,7 +28,7 @@
             <RowDefinition Height="50"></RowDefinition>
         </Grid.RowDefinitions>
         
-        <!-- KONKRETNA DEFINICIJA UI -->
+        <!-- KONKRETNA DEFINICIJA UI METRO UI -->
         <mah:Tile Grid.Row="1" Grid.Column="1" Click="learnMoreBtn_Click" Background="Teal" Width="324" Margin="0 10 -30 0">
             <StackPanel Orientation="Vertical" Margin="0 -20 0 0">
                 <iconPacks:PackIconBootstrapIcons Width="60" Height="60" VerticalAlignment="Center" HorizontalAlignment="Center" Kind="PersonCheckFill" />
