--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -29,7 +29,7 @@
         </Grid.RowDefinitions>
         
         <!-- KONKRETNA DEFINICIJA UI METRO UI -->
-        <mah:Tile Grid.Row="1" Grid.Column="1" Click="learnMoreBtn_Click" Background="Teal" Width="324" Margin="0 10 -30 0">
+        <mah:Tile Name="loginTile" Grid.Row="1" Grid.Column="1" Click="ShowLoginDialog" Background="Teal" Width="324" Margin="0 10 -30 0">
             <StackPanel Orientation="Vertical" Margin="0 -20 0 0">
                 <iconPacks:PackIconBootstrapIcons Width="60" Height="60" VerticalAlignment="Center" HorizontalAlignment="Center" Kind="PersonCheckFill" />
                 <TextBlock Margin="0 10 0 0" VerticalAlignment="Center" Text="{Binding}" FontSize="16" FontFamily="Gadugi" FontWeight="SemiBold">PRIJAVITE SE</TextBlock>
