--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -36,7 +36,7 @@
             </StackPanel>
         </mah:Tile>
 
-        <mah:Tile Grid.Row="1" Grid.Column="2" Click="learnMoreBtn_Click" Width="324" Margin="-20 10 0 0">
+        <mah:Tile Grid.Row="1" Grid.Column="2" Name="registracijaTile" Click="registracijaTile_Click" Width="324" Margin="-20 10 0 0">
             <StackPanel Orientation="Vertical" Margin="0 -20 0 0">
                 <iconPacks:PackIconBootstrapIcons Width="60" Height="60" VerticalAlignment="Center" HorizontalAlignment="Center" Kind="PersonPlusFill" />
                 <TextBlock Margin="0 10 0 0" VerticalAlignment="Center" Text="{Binding}" FontSize="16" FontFamily="Gadugi" FontWeight="SemiBold">REGISTRACIJA</TextBlock>
