--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -43,14 +43,14 @@
             </StackPanel>
         </mah:Tile>
 
-        <mah:Tile Grid.Row="2" Grid.Column="1" Width="324" Click="learnMoreBtn_Click" Margin="0 -20 -30 0" Background="#1E9FFF" >
+        <mah:Tile Grid.Row="2" Grid.Column="1" Name="noviZapisTile" Width="324" Click="noviZapisTile_Click" Margin="0 -20 -30 0" Background="#1E9FFF" >
             <StackPanel Orientation="Vertical" Margin="0 0 0 0">
                 <iconPacks:PackIconBootstrapIcons Width="65" Height="65" VerticalAlignment="Center" HorizontalAlignment="Center" Kind="NodePlusFill" />
                 <TextBlock Margin="0 10 0 0" VerticalAlignment="Center" Text="{Binding}" FontSize="16" FontFamily="Gadugi" FontWeight="SemiBold">NOVI ZAPIS</TextBlock>
             </StackPanel>
         </mah:Tile>
 
-        <mah:Tile Grid.Row="2" Grid.Column="2" Click="learnMoreBtn_Click" Width="324" Margin="-20 -20 0 0" Background="#D2691E">
+        <mah:Tile Grid.Row="2" Grid.Column="2" Name="statistikaTile" Click="statistikaTile_Click" Width="324" Margin="-20 -20 0 0" Background="#D2691E">
             <StackPanel Orientation="Vertical" Margin="0 0 0 0">
                 <iconPacks:PackIconBootstrapIcons Width="65" Height="65" VerticalAlignment="Center" HorizontalAlignment="Center" Kind="PieChartFill" />
                 <TextBlock Margin="0 10 0 0" VerticalAlignment="Center" Text="{Binding}" FontSize="16" FontFamily="Gadugi" FontWeight="SemiBold">STASTITIKA</TextBlock>
