--- a/src/User Interface/Dashboard/KorisnickaTabla.xaml
+++ b/src/User Interface/Dashboard/KorisnickaTabla.xaml
@@ -3,12 +3,53 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:User_Interface.Dashboard"
+        xmlns:local="clr-namespace:User_Interface.Dashboard" xmlns:hc="https://handyorg.github.io/handycontrol"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
         ResizeMode="NoResize"
         Title="Cache Memory - Dashboard" Height="450" Width="800">
-    <Grid>
+    <Grid Background="#B6D0E2">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="2*"></ColumnDefinition>
+            <ColumnDefinition Width="2*"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="2*"></RowDefinition>
+            <RowDefinition Height="2*"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+        </Grid.RowDefinitions>
         
+        <Grid Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Grid.RowSpan="2" Background="White" >
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="0.5*"></RowDefinition>
+                <RowDefinition Height="*"></RowDefinition>
+                <RowDefinition Height="*"></RowDefinition>
+            </Grid.RowDefinitions>
+
+            <hc:SimpleText Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" FontSize="22" FontWeight="Bold" MinHeight="50" Text="" Name="naslov" Visibility="Visible" Foreground="#222222" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="30 20 0 0" />
+            <Button Grid.Row="0" Grid.Column="2" FontSize="16" Style="{StaticResource ButtonDanger}" FontWeight="SemiBold" MinHeight="50" Name="exitBtn" Click="exitBtn_Click" BorderBrush="Transparent" Content="Odjavite se" Foreground="Crimson" Background="Transparent" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0 10 30 10" />
+
+            <TabControl Margin="10" BorderThickness="0" Style="{StaticResource TabControlCapsule}" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Grid.RowSpan="2">
+                <TabItem Header="Registrujte novo brojilo">
+                    <Grid>
+                        
+                    </Grid>
+                </TabItem>
+                <TabItem Header="Dodajte potrošnju">
+                </TabItem>
+                <TabItem Header="Statistika potrošnje">
+                </TabItem>
+            </TabControl>
+
+        </Grid>
     </Grid>
 </Window>
