--- a/src/User Interface/Dashboard/KorisnickaTabla.xaml
+++ b/src/User Interface/Dashboard/KorisnickaTabla.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
         ResizeMode="NoResize"
-        Title="Cache Memory - Dashboard" Height="450" Width="800">
+        Title="Cache Memory - Dashboard" Height="550" Width="800">
     <Grid Background="#B6D0E2">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"></ColumnDefinition>
@@ -38,13 +38,51 @@
             <hc:SimpleText Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" FontSize="22" FontWeight="Bold" MinHeight="50" Text="" Name="naslov" Visibility="Visible" Foreground="#222222" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="30 20 0 0" />
             <Button Grid.Row="0" Grid.Column="2" FontSize="16" Style="{StaticResource ButtonDanger}" FontWeight="SemiBold" MinHeight="50" Name="exitBtn" Click="exitBtn_Click" BorderBrush="Transparent" Content="Odjavite se" Foreground="Crimson" Background="Transparent" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0 10 30 10" />
 
-            <TabControl Margin="10" BorderThickness="0" Style="{StaticResource TabControlCapsule}" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Grid.RowSpan="2">
+            <TabControl Margin="10" BorderThickness="0" FontSize="14" Style="{StaticResource TabControlCapsule}" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Grid.RowSpan="2">
                 <TabItem Header="Registrujte novo brojilo">
-                    <Grid>
-                        
-                    </Grid>
+                    <StackPanel>
+                        <hc:SimpleText FontSize="16" Margin="0 15 0 0" FontWeight="SemiBold" MinHeight="50" Text="Unesite model brojila (SE-62241) " VerticalAlignment="Center" HorizontalAlignment="Center" />
+                        <TextBox FontSize="18" FontWeight="Bold" MaxHeight="40" Name="modelBrojilo"></TextBox>
+                        <Button Background="#0066b2" BorderBrush="#0066b2" Foreground="White" Margin="0 20 0 0" Name="dodajBrojilo" Click="dodajBrojilo_Click" FontSize="17" FontWeight="Bold" MinHeight="38" Content="Registracija novog brojila"/>
+                    </StackPanel>
                 </TabItem>
                 <TabItem Header="Dodajte potrošnju">
+                    <Grid Margin="0 10 0 0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"></ColumnDefinition>
+                            <ColumnDefinition Width="*"></ColumnDefinition>
+                        </Grid.ColumnDefinitions>
+
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*"></RowDefinition>
+                            <RowDefinition Height="*"></RowDefinition>
+                            <RowDefinition Height="*"></RowDefinition>
+                            <RowDefinition Height="*"></RowDefinition>
+                        </Grid.RowDefinitions>
+
+                        <hc:SimpleText Grid.Row="0" Grid.Column="0" FontSize="16" FontWeight="SemiBold" MinHeight="50" Text="Odaberite brojilo " Margin="0 0 0 -10" VerticalAlignment="Bottom"  HorizontalAlignment="Center" />
+                        <ComboBox FontSize="18" Grid.Row="0" Grid.Column="1" FontWeight="Bold" MaxHeight="40" Name="odabranoBrojilo"></ComboBox>
+                        
+                        <hc:SimpleText FontSize="16" Grid.Row="1" Grid.Column="0"  Margin="0 15 0 0" FontWeight="SemiBold" MinHeight="50" Text="Odaberite mesec " VerticalAlignment="Top" HorizontalAlignment="Center" />
+                        <ComboBox FontSize="18" FontWeight="Bold" MaxHeight="40" Name="odabraniMesec" Grid.Row="1" Grid.Column="1" >
+                            <ComboBoxItem>1</ComboBoxItem>
+                            <ComboBoxItem>2</ComboBoxItem>
+                            <ComboBoxItem>3</ComboBoxItem>
+                            <ComboBoxItem>4</ComboBoxItem>
+                            <ComboBoxItem>5</ComboBoxItem>
+                            <ComboBoxItem>6</ComboBoxItem>
+                            <ComboBoxItem>7</ComboBoxItem>
+                            <ComboBoxItem>8</ComboBoxItem>
+                            <ComboBoxItem>9</ComboBoxItem>
+                            <ComboBoxItem>10</ComboBoxItem>
+                            <ComboBoxItem>11</ComboBoxItem>
+                            <ComboBoxItem>12</ComboBoxItem>
+                        </ComboBox>
+                        <hc:SimpleText Grid.Row="2" Grid.Column="0" FontSize="16" FontWeight="SemiBold" MinHeight="50" Text="Ostvarena potrošnja" Margin="0 0 0 -10" VerticalAlignment="Bottom"  HorizontalAlignment="Center" />
+                        <TextBox Grid.Row="2" Grid.Column="1" FontSize="18" FontWeight="Bold" MaxHeight="40" Name="potrosnja"></TextBox>
+
+                        <Button Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2"  Background="#0066b2" BorderBrush="#0066b2" Foreground="White" Margin="0 10 0 0" Name="dodajPotrosnjuBtn" Click="dodajPotrosnjuBtn_Click" FontSize="17" FontWeight="Bold" MinHeight="38" Content="Dodavanje u evidenciju potrošnje"/>
+                    </Grid>
                 </TabItem>
                 <TabItem Header="Statistika potrošnje">
                 </TabItem>
