--- a/src/WPF UI/App.xaml
+++ b/src/WPF UI/App.xaml
@@ -4,6 +4,8 @@
              xmlns:local="clr-namespace:WPF_UI"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <Style TargetType="Border" x:Key="RoundMe">
+            <Setter Property="CornerRadius" Value="8"/>
+        </Style>
     </Application.Resources>
 </Application>
