--- a/src/WPF UI/Moduli/Statistika.xaml
+++ b/src/WPF UI/Moduli/Statistika.xaml
@@ -7,8 +7,71 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Statistika">
+    <Grid Margin="10 50 0 0">
+        <StackPanel Orientation="Vertical">
+            <TextBlock FontSize="15" FontWeight="DemiBold" FontStyle="Italic" FontFamily="Fonts/#OS" Text="Informacije o kriterijumu" Foreground="White" />
 
-    <Grid>
-        
+            <StackPanel Orientation="Horizontal" Margin="0 10 0 0">
+                <TextBlock FontSize="14" FontWeight="DemiBold" FontFamily="Fonts/#OS" Text="Ispis po:         " Foreground="White" />
+                <ComboBox SelectionChanged="kriterijumPretrage_SelectionChanged" SelectedIndex="0" BorderThickness="0" Margin="5 0 0 0" Name="kriterijumPretrage" MinHeight="22" MinWidth="200" Height="18" FontSize="14" FontWeight="DemiBold" FontFamily="Fonts/#OS">
+                    <ComboBoxItem>User ID</ComboBoxItem>
+                    <ComboBoxItem>User Name</ComboBoxItem>
+                    <ComboBoxItem>Gradu evidentirane potrošnje</ComboBoxItem>
+                    <ComboBoxItem>Mesecu evidentirane potrošnje</ComboBoxItem>
+                </ComboBox>
+            </StackPanel>
+
+            <StackPanel Orientation="Horizontal" Margin="0 10 0 0">
+                <TextBlock Name="labela" FontSize="14" FontWeight="DemiBold" FontFamily="Fonts/#OS" Text="User ID:          " Foreground="White" />
+                <TextBox BorderThickness="0" Margin="5 0 0 0" Name="unosId" MinHeight="10" MinWidth="200" FontSize="14" FontWeight="DemiBold" FontFamily="Fonts/#OS"></TextBox>
+            </StackPanel>
+
+            <StackPanel Orientation="Horizontal" Margin="0 10 0 0" Visibility="Visible" IsEnabled="False">
+                <TextBlock FontSize="14" FontWeight="DemiBold" FontFamily="Fonts/#OS" Text="U Mesecu:      " Foreground="White" />
+                <ComboBox SelectedIndex="0" BorderThickness="0" Margin="5 0 0 0" Name="mesecPotrosnje" MinHeight="22" MinWidth="200" Height="18" FontSize="14" FontWeight="DemiBold" FontFamily="Fonts/#OS">
+                    <ComboBoxItem>Januar</ComboBoxItem>
+                    <ComboBoxItem>Februar</ComboBoxItem>
+                    <ComboBoxItem>Mart</ComboBoxItem>
+                    <ComboBoxItem>April</ComboBoxItem>
+                    <ComboBoxItem>Maj</ComboBoxItem>
+                    <ComboBoxItem>Jun</ComboBoxItem>
+                    <ComboBoxItem>Jul</ComboBoxItem>
+                    <ComboBoxItem>Avgust</ComboBoxItem>
+                    <ComboBoxItem>Septembar</ComboBoxItem>
+                    <ComboBoxItem>Oktobar</ComboBoxItem>
+                    <ComboBoxItem>Novembar</ComboBoxItem>
+                    <ComboBoxItem>Decembar</ComboBoxItem>
+                </ComboBox>
+            </StackPanel>
+
+            <Button Name="prikazPodataka" Click="prikazPodataka_Click" FontSize="15" MinHeight="30" FontWeight="DemiBold" FontFamily="Fonts/#OS"
+                    Content="  PRIKAZ PODATAKA" Margin="50 15 80 0" Foreground="White">
+                <Button.Resources>
+                    <Style TargetType="Border" BasedOn="{StaticResource RoundMe}"/>
+                </Button.Resources>
+                <Button.Style>
+                    <Style TargetType="{x:Type Button}">
+                        <Setter Property="Background" Value="#046865"/>
+                        <Setter Property="BorderBrush" Value="#046865"/>
+                        <Setter Property="BorderThickness" Value="1"/>
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="{x:Type Button}">
+                                    <Border Background="{TemplateBinding Background}">
+                                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                    </Border>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                        <Style.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="#21A0A0"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </Button.Style>
+            </Button>
+
+        </StackPanel>
     </Grid>
 </Page>
