--- a/src/WPF UI/Moduli/Statistika.xaml
+++ b/src/WPF UI/Moduli/Statistika.xaml
@@ -18,6 +18,7 @@
                     <ComboBoxItem>User Name</ComboBoxItem>
                     <ComboBoxItem>Gradu evidentirane potrošnje</ComboBoxItem>
                     <ComboBoxItem>Mesecu evidentirane potrošnje</ComboBoxItem>
+                    <ComboBoxItem>Svi podaci evidentirane potrošnje</ComboBoxItem>
                 </ComboBox>
             </StackPanel>
 
@@ -26,7 +27,7 @@
                 <TextBox BorderThickness="0" Margin="5 0 0 0" Name="unosId" MinHeight="10" MinWidth="200" FontSize="14" FontWeight="DemiBold" FontFamily="Fonts/#OS"></TextBox>
             </StackPanel>
 
-            <StackPanel Orientation="Horizontal" Margin="0 10 0 0" Visibility="Visible" IsEnabled="False">
+            <StackPanel Orientation="Horizontal" Margin="0 10 0 0" Visibility="Visible" Name="meniMesec" IsEnabled="False">
                 <TextBlock FontSize="14" FontWeight="DemiBold" FontFamily="Fonts/#OS" Text="U Mesecu:      " Foreground="White" />
                 <ComboBox SelectedIndex="0" BorderThickness="0" Margin="5 0 0 0" Name="mesecPotrosnje" MinHeight="22" MinWidth="200" Height="18" FontSize="14" FontWeight="DemiBold" FontFamily="Fonts/#OS">
                     <ComboBoxItem>Januar</ComboBoxItem>
@@ -72,6 +73,17 @@
                 </Button.Style>
             </Button>
 
+            <ListView Name="dataViewDb" Margin="0 20 0 0">
+                <ListView.View>
+                    <GridView AllowsColumnReorder="true" ColumnHeaderToolTip="Statistika">
+                        <GridViewColumn DisplayMemberBinding="{Binding Path=UserID}" Header="UID" Width="35"/>
+                        <GridViewColumn DisplayMemberBinding="{Binding Path=Username}" Header="Username" Width="100"/>
+                        <GridViewColumn DisplayMemberBinding="{Binding Path=UserCity}" Header="Grad" Width="100"/>
+                        <GridViewColumn DisplayMemberBinding="{Binding Path=Mesec}" Header="Mesec" Width="100"/>
+                        <GridViewColumn DisplayMemberBinding="{Binding Path=Potroseno}" Header="Potrošnja" Width="120"/>
+                    </GridView>
+                </ListView.View>
+            </ListView>
         </StackPanel>
     </Grid>
 </Page>
