--- a/src/WPF UI/MainWindow.xaml
+++ b/src/WPF UI/MainWindow.xaml
@@ -86,7 +86,7 @@
                         <Setter Property="Background" Value="#de4967"/>
                         <Setter Property="BorderBrush" Value="#de4867"/>
                         <Setter Property="BorderThickness" Value="1"/>
-                        <Setter Property="Template1">
+                        <Setter Property="Template">
                             <Setter.Value>
                                 <ControlTemplate TargetType="{x:Type Button}">
                                     <Border Background="{TemplateBinding Background}">
