--- a/src/WPF UI/MainWindow.xaml
+++ b/src/WPF UI/MainWindow.xaml
@@ -147,7 +147,7 @@
                 </TextBlock>
             </StackPanel>
             
-            <Grid Background="AliceBlue" Margin="20 0 20 20" Grid.Row="0" Grid.Column="2" Grid.RowSpan="4" Grid.ColumnSpan="2">
+            <Grid Background="Transparent" Margin="20 0 20 20" Grid.Row="0" Grid.Column="2" Grid.RowSpan="4" Grid.ColumnSpan="2">
                 <Frame NavigationUIVisibility="Hidden" Panel.ZIndex="1" Source="/Moduli/Pocetna.xaml" Name="frame" />
             </Grid>
         </Grid>
