Added line breaks

--- a/src/WPF UI/MainWindow.xaml
+++ b/src/WPF UI/MainWindow.xaml
@@ -138,10 +138,10 @@
                 <TextBlock TextWrapping="Wrap" FontSize="15" FontStyle="Italic" FontFamily="Fonts/#OS" Grid.ColumnSpan="2" Foreground="White" Margin="10 4 0 0">
                     <LineBreak/>
                     Cache Memory je projekat iz predmeta Elementi Razvoja Softvera
-                    koji se sluša u V semestru na Fakultetu tehničkih nauka u Novom Sadu.
+                    koji se sluša u V semestru na Fakultetu tehničkih nauka u Novom Sadu. <LineBreak/><LineBreak/>
                     
                     Aplikacija prikuplja podatke od korisnika o trenutnoj potrošnji toplotne energije
-                    ili o potrošnji u nekom od prethodnih perioda.
+                    ili o potrošnji u nekom od prethodnih perioda.<LineBreak/><LineBreak/>
                     
                     Moguća je pretraga podataka po određenim kriterijumima, unos podataka, filtriranje podataka.
                 </TextBlock>
