--- a/src/WPF UI/Moduli/Statistika.xaml
+++ b/src/WPF UI/Moduli/Statistika.xaml
@@ -28,7 +28,7 @@
             </StackPanel>
 
             <StackPanel Orientation="Horizontal" Margin="0 10 0 0" Visibility="Visible" Name="meniMesec" IsEnabled="False">
-                <TextBlock FontSize="14" FontWeight="DemiBold" FontFamily="Fonts/#OS" Text="U Mesecu:      " Foreground="Transparent" />
+                <TextBlock FontSize="14" FontWeight="DemiBold" FontFamily="Fonts/#OS" Text="U Mesecu:      " Foreground="White" />
                 <ComboBox SelectedIndex="0" BorderThickness="0" Margin="5 0 0 0" Name="mesecPotrosnje" MinHeight="22" MinWidth="200" Height="18" FontSize="14" FontWeight="DemiBold" FontFamily="Fonts/#OS">
                     <ComboBoxItem>Januar</ComboBoxItem>
                     <ComboBoxItem>Februar</ComboBoxItem>
