--- a/src/WPF UI/Moduli/Statistika.xaml
+++ b/src/WPF UI/Moduli/Statistika.xaml
@@ -9,7 +9,7 @@
       Title="Statistika">
     <Grid Margin="10 50 0 0">
         <StackPanel Orientation="Vertical">
-            <TextBlock FontSize="15" FontWeight="DemiBold" FontStyle="Oblique" FontFamily="Fonts/#OS" Text="Informacije o kriterijumu" Foreground="White" />
+            <TextBlock FontSize="15" FontWeight="DemiBold" FontStyle="Italic" FontFamily="Fonts/#OS" Text="Informacije o kriterijumu" Foreground="White" />
 
             <StackPanel Orientation="Horizontal" Margin="0 10 0 0">
                 <TextBlock FontSize="14" FontWeight="DemiBold" FontFamily="Fonts/#OS" Text="Ispis po:         " Foreground="White" />
